# cppBase

./: CMakeLists.txt  main.cpp
D000_cpp_primer5e/: test.h
D000_cpp_primer5e/CH01_bookstore/: Sales_item.h  bookstoremain.cpp
D000_cpp_primer5e/CH02_data_type/: datatypemain.cpp
D000_cpp_primer5e/CH03_string_vector_iterator_arrary/: string_vector_arrary_iterator_test.cpp
D000_cpp_primer5e/CH04_type_convert/: type_convert_test.cpp
D000_cpp_primer5e/CH06_function/: function_test.cpp
D000_cpp_primer5e/CH07_class/: class_main.cpp  screen.cpp  window_mgr.cpp  window_mgr.h
D000_cpp_primer5e/CH09_ordered_container/: ordered_container_main.cpp
D000_cpp_primer5e/CH10_algorithms/: algorithms_main.cpp
D000_cpp_primer5e/CH11_map_set/: map_set_main.cpp
D000_cpp_primer5e/CH12_dynamic_memory/: dynamic_memory_main.cpp  str_blob.cpp  str_blob.h
D000_cpp_primer5e/CH13_copy_move_destruct/: copy_move_destruct_main.cpp  str_vec.cpp  str_vec.h
D000_cpp_primer5e/CH14_operator_type_convert/: operator_type_convert_main.cpp
D000_cpp_primer5e/CH15_oop/: Basket.cc  Basket.h  Quote.h  oop_main.cpp
D000_cpp_primer5e/CH16_template/: blob.h  template_main.cpp
D10_stl_algorithm_functional_/: HelloWorld10.cpp
D11_game_snack/: food.cpp  food.h  main.cpp  snake.cpp  snake.h  unistd.h  wall.cpp  wall.h
D12_c++_new_features_auto_decltype_typename_typedef_using_templateDefaultParams/: HelloWorld12.cpp
D13_c++_new_features_sharedPtr_unique_ptr_moveConstructor_perfectForward/: HelloWorld13.cpp
D14_c++_new_features_/: HelloWorld14.cpp
D1_namespace/: HelloWord1.cpp  game1.cpp  game1.h  game2.cpp  game2.h
D2_C++_features_const_extern/: HelloWorld2.cpp  extern_test.cpp
D3_reference_pointer_array/: Hellowrold3.cpp
D4_function_inline/: HelloWorld4.cpp
D5_oop_constructor_static_this_const_friend/: HelloWorld5.cpp
D6_oop_operator_lvalue_rvalue/: HelloWorld6.cpp  MyArray.cpp  MyArray.h  mystring.cpp  mystring.h
D7_oop_extends_destructor_Polymorphism_/: DragonSword.cpp  DragonSword.h  HelloWorld7.cpp  Hero.cpp  Hero.h  Knife.cpp  Knife.h  Monster.cpp  Monster.h  Weapon.h
D8_template/: HelloWorld8.cpp  MyArray.hpp  Person5.hpp
D9_cast_exception_io/: HelloWord9.cpp
