cmake_minimum_required(VERSION 3.14)
project(cppBasic)

set(CMAKE_CXX_STANDARD 14)

#add_executable(cppBasic D1_namespace/HelloWord1.cpp D1_namespace/game1.h D1_namespace/game1.cpp D1_namespace/game2.h D1_namespace/game2.cpp D2_C++_features_const_extern/HelloWorld2.cpp)
#add_executable(cppBasic D2_C++_features_const_extern/HelloWorld2.cpp D2_C++_features_const_extern/extern_test.cpp)
#add_executable(cppBasic D3_reference_pointer_array/Hellowrold3.cpp )
#add_executable(cppBasic D4_function_inline/HelloWorld4.cpp )
#add_executable(cppBasic D5_oop_constructor_static_this_const_friend/HelloWorld5.cpp )
#add_executable(cppBasic D6_oop_operator_lvalue_rvalue/HelloWorld6.cpp D6_oop_operator_lvalue_rvalue/MyArray.h D6_oop_operator_lvalue_rvalue/MyArray.cpp D6_oop_operator_lvalue_rvalue/mystring.h D6_oop_operator_lvalue_rvalue/mystring.cpp )
#add_executable(cppBasic D7_oop_extends_destructor_Polymorphism_/HelloWorld7.cpp D7_oop_extends_destructor_Polymorphism_/Weapon.h D7_oop_extends_destructor_Polymorphism_/Knife.h D7_oop_extends_destructor_Polymorphism_/Knife.h D7_oop_extends_destructor_Polymorphism_/Knife.cpp D7_oop_extends_destructor_Polymorphism_/DragonSword.h D7_oop_extends_destructor_Polymorphism_/DragonSword.cpp D7_oop_extends_destructor_Polymorphism_/Hero.h D7_oop_extends_destructor_Polymorphism_/Hero.cpp D7_oop_extends_destructor_Polymorphism_/Monster.h D7_oop_extends_destructor_Polymorphism_/Monster.cpp )
#add_executable(cppBasic D8_template/HelloWorld8.cpp D8_template/Person5.hpp D8_template/MyArray.hpp )
#add_executable(cppBasic D9_cast_exception_io/HelloWord9.cpp )
#add_executable(cppBasic D10_stl_algorithm_functional_/HelloWorld10.cpp )
#add_executable(cppBasic D11_game_snack/wall.h D11_game_snack/wall.cpp D11_game_snack/main.cpp D11_game_snack/snake.h D11_game_snack/snake.cpp D11_game_snack/food.h D11_game_snack/food.cpp D11_game_snack/unistd.h)
#add_executable(cppBasic D12_c++_new_features_auto_decltype_typename_typedef_using_templateDefaultParams/HelloWorld12.cpp)
#add_executable(cppBasic D13_c++_new_features_sharedPtr_unique_ptr_moveConstructor_perfectForward/HelloWorld13.cpp)
#add_executable(cppBasic D14_c++_new_features_/HelloWorld14.cpp)